Login passwords are kept in sha512
hashed instead of plain text in the file (see
https://github.com/dogukancagatay/encode-explorer/commit/e3f11b7be841f1c8ceb0f5c2390d5d3d331f4e15)
and quick fix and adjustement in config file

--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -17,7 +17,7 @@ table.table td{padding:3px;}
 table.table tr.row.two {background-color:#fcfdfe;}
 table.table tr.row.one {background-color:#f8f9fa;}
 table.table tr.row td.icon {width:25px;padding-top:3px;padding-bottom:1px;}
-table.table td.del {width:25px;}
+table.table td.del {width:25px; text-align: center;}
 table.table tr.row td.size {width: 100px; text-align: right;}
 table.table tr.row td.changed {width: 150px;text-align: center;}
 table.table tr.header img {vertical-align:bottom;}
