--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1,6 +1,6 @@
 /* General styles */
-body {background-color:#fff;font-family:Verdana;font-size:small;}
-a{color: #000;text-decoration: none;}
+body {background-color:#FFF;font-family:Verdana;font-size:small;}
+a {color: #000;text-decoration: none;}
 a:hover {text-decoration: underline;}
 #top {width:100%;padding-bottom: 20px;}
 #top a span, #top a:hover, #top a span:hover{color:#68a9d2;font-weight:bold;text-align:center;font-size:large;}
@@ -12,17 +12,17 @@ div.subtitle{width:80%;margin: 0 auto;color:#68a9d2;text-align:center;}
 input {border: 1px solid #CDD2D6;}
 .bar{width:100%;clear:both;height:1px;}
 /* File list */
-table.table {width:100%;border-collapse: collapse; }
+table.table {width:100%;border-collapse: collapse;table-layout: fixed;word-wrap: break-word;}
 table.table td{padding:3px;}
 table.table tr.row.two {background-color:#fcfdfe;}
 table.table tr.row.one {background-color:#f8f9fa;}
 table.table tr.row td.icon {width:25px;padding-top:3px;padding-bottom:1px;}
-table.table td.del {width:25px; text-align: center;}
-table.table tr.row td.size {width: 100px; text-align: right;}
+table.table td.del {width:25px;}
+table.table tr.row td.size {width: 100px;text-align: right;}
 table.table tr.row td.changed {width: 150px;text-align: center;}
 table.table tr.header img {vertical-align:bottom;}
 table img{border:0;}
-/* Info area */ 
+/* Info area */
 #info {color:#000;font-family:Verdana;max-width:680px;position: relative;margin: 0 auto;text-align:center;}
 /* Thumbnail area */
 #thumb {position:absolute;border: 1px solid #CDD2D6;background:#f8f9fa;display:none;padding:3px;}
@@ -36,7 +36,7 @@ table img{border:0;}
 #upload #newdir_container, #upload #password_container {float:left;}
 #upload #upload_container{float:right;}
 #upload input.upload_dirname, #upload input.upload_password{width:140px;}
-#upload input.upload_file{font-size:small;width:280px;}
+#upload input.upload_file{font-size:small;}
 /* Breadcrumbs */
 div.breadcrumbs {display:block;padding:1px 3px;color:#ccc;font-size:x-small;}
 div.breadcrumbs a{display:inline-block;color:#ccc;padding:2px 0;font-size:small;}
@@ -46,7 +46,7 @@ div.breadcrumbs a{display:inline-block;color:#ccc;padding:2px 0;font-size:small;
 #login label{width: 120px;text-align: right;}
 /* Mobile interface */
 body.mobile #frame, body.mobile #info, body.mobile #upload {max-width:none;}
-body.mobile {font-size:.7em;}
+body.mobile {font-size:medium;}
 body.mobile a.item {display:block;padding:10px 0;}
 body.mobile a.item span.size {float:right;margin-left:10px;}
 body.mobile table.table {margin-bottom:30px;}
